--- a/stories/v0.1.0-core-types.md
+++ b/stories/v0.1.0-core-types.md
@@ -32,36 +32,36 @@ Implement the core cryptographic and identity types that form the foundation of 
 
 ### signature.zig (Digital Signatures)
 
-- [ ] `Signature` type as 64-byte array wrapper
-- [ ] Ed25519 signature verification
-- [ ] Signature serialization/deserialization
-- [ ] `verify()` function for signature validation
-- [ ] `isValid()` for format checking
-- [ ] Unit tests with known test vectors
-- [ ] Integration with pubkey types
+- [x] `Signature` type as 64-byte array wrapper
+- [x] Ed25519 signature verification
+- [x] Signature serialization/deserialization
+- [x] `verify()` function for signature validation
+- [x] `isValid()` for format checking
+- [x] Unit tests with known test vectors
+- [x] Integration with pubkey types
 
 ### keypair.zig (Key Pair Management)
 
-- [ ] `Keypair` struct with public/private keys
-- [ ] `generate()` function for random key generation
-- [ ] `fromBase58()` for loading from strings
-- [ ] `sign()` method for message signing
-- [ ] `pubkey()` accessor for public key
-- [ ] Secure memory handling (zeroization)
-- [ ] Unit tests for key operations
+- [x] `Keypair` struct with public/private keys
+- [x] `generate()` function for random key generation
+- [x] `fromBase58()` for loading from strings
+- [x] `sign()` method for message signing
+- [x] `pubkey()` accessor for public key
+- [x] Secure memory handling (zeroization)
+- [x] Unit tests for key operations
 
 ### Integration Tests
 
-- [ ] Cross-module compatibility tests
-- [ ] End-to-end signature verification
-- [ ] Program address derivation validation
+- [x] Cross-module compatibility tests
+- [x] End-to-end signature verification
+- [x] Program address derivation validation
 - [ ] Performance benchmarks vs Rust SDK
 
 ## 完成状态
 
 - 开始日期: 2026-01-03
-- 预计完成: 2026-01-10
-- 当前状态: 🔄 进行中 (75% 完成)
+- 完成日期: 2026-01-03
+- 当前状态: ✅ 已完成
 - 阻塞因素: None
 
 ## 设计决策
