feat: add epoch_rewards_hasher module (v0.25.0)
- Implement EpochRewardsHasher with SipHash-1-3 for deterministic partitioning
- Add hashToPartition with unbiased 128-bit arithmetic
- Include 6 tests matching Rust source plus Zig-specific tests
- Export module from root.zig
- Update ROADMAP: Hash Functions now 4/4 (100%), Total 52/55 (95%)
- Sync story files for v0.22.0, v0.23.0, v0.24.0 with actual completion status

Rust source: https://github.com/anza-xyz/solana-sdk/blob/master/epoch-rewards-hasher/src/lib.rs

--- a/stories/v0.23.0-advanced-crypto.md
+++ b/stories/v0.23.0-advanced-crypto.md
@@ -4,10 +4,10 @@
 
 ## 目标
 
-- [ ] 实现 `bn254.zig` - BN254 椭圆曲线运算，支持零知识证明
-- [ ] 实现 `big-mod-exp.zig` - 大整数模幂运算
-- [ ] 提供完整的加密原语 API
-- [ ] 确保性能和安全性符合 Solana 智能合约要求
+- [x] 实现 `bn254.zig` - BN254 椭圆曲线运算，支持零知识证明
+- [x] 实现 `big-mod-exp.zig` - 大整数模幂运算
+- [x] 提供完整的加密原语 API
+- [x] 确保性能和安全性符合 Solana 智能合约要求
 
 ## 验收标准
 
