--- a/stories/v0.24.0-extended-native-programs.md
+++ b/stories/v0.24.0-extended-native-programs.md
@@ -4,10 +4,10 @@
 
 ## 目标
 
-- [ ] 实现 `loader_v4.zig` - 新的加载器接口，支持高级程序部署功能
-- [ ] 实现 `secp256r1_program.zig` - P-256 椭圆曲线签名验证，支持 WebAuthn
-- [ ] 提供完整的原生程序 API
-- [ ] 确保安全性符合 Solana 智能合约要求
+- [x] 实现 `loader_v4.zig` - 新的加载器接口，支持高级程序部署功能
+- [x] 实现 `secp256r1_program.zig` - P-256 椭圆曲线签名验证，支持 WebAuthn
+- [x] 提供完整的原生程序 API
+- [x] 确保安全性符合 Solana 智能合约要求
 
 ## 验收标准
 
