--- a/stories/v0.22.0-sysvar-completion.md
+++ b/stories/v0.22.0-sysvar-completion.md
@@ -15,51 +15,51 @@
 
 ### last_restart_slot.zig
 
-- [ ] Rust 源引用注释 (last-restart-slot crate)
-- [ ] `LastRestartSlot` 结构体定义
-- [ ] `parse` 函数 - 从账户数据解析
-- [ ] `size` 常量 (8 bytes)
-- [ ] 单元测试
+- [x] Rust 源引用注释 (last-restart-slot crate)
+- [x] `LastRestartSlot` 结构体定义
+- [x] `parse` 函数 - 从账户数据解析
+- [x] `size` 常量 (8 bytes)
+- [x] 单元测试
 
 ### sysvar.zig
 
-- [ ] Rust 源引用注释 (sysvar crate)
-- [ ] `getClock` 函数 - 获取时钟系统变量
-- [ ] `getRent` 函数 - 获取租金系统变量
-- [ ] `getSlotHashes` 函数 - 获取插槽哈希系统变量
-- [ ] `getSlotHistory` 函数 - 获取插槽历史系统变量
-- [ ] `getStakeHistory` 函数 - 获取质押历史系统变量
-- [ ] `getInstructions` 函数 - 获取指令系统变量
-- [ ] `checkId` 函数 - 验证系统变量账户 ID
-- [ ] 单元测试
+- [x] Rust 源引用注释 (sysvar crate)
+- [x] `getClock` 函数 - 获取时钟系统变量
+- [x] `getRent` 函数 - 获取租金系统变量
+- [x] `getSlotHashes` 函数 - 获取插槽哈希系统变量
+- [x] `getSlotHistory` 函数 - 获取插槽历史系统变量
+- [x] `getStakeHistory` 函数 - 获取质押历史系统变量
+- [x] `getInstructions` 函数 - 获取指令系统变量
+- [x] `checkId` 函数 - 验证系统变量账户 ID
+- [x] 单元测试
 
 ### sysvar-id.zig
 
-- [ ] 所有系统变量的公钥常量定义
-- [ ] CLOCK 常量
-- [ ] RENT 常量
-- [ ] SLOT_HASHES 常量
-- [ ] SLOT_HISTORY 常量
-- [ ] STAKE_HISTORY 常量
-- [ ] INSTRUCTIONS 常量
-- [ ] EPOCH_REWARDS 常量
-- [ ] LAST_RESTART_SLOT 常量
-- [ ] 验证常量值正确性
+- [x] 所有系统变量的公钥常量定义
+- [x] CLOCK 常量
+- [x] RENT 常量
+- [x] SLOT_HASHES 常量
+- [x] SLOT_HISTORY 常量
+- [x] STAKE_HISTORY 常量
+- [x] INSTRUCTIONS 常量
+- [x] EPOCH_REWARDS 常量
+- [x] LAST_RESTART_SLOT 常量
+- [x] 验证常量值正确性
 
 ### epoch-rewards.zig
 
-- [ ] Rust 源引用注释 (epoch-rewards crate)
-- [ ] `EpochRewards` 结构体定义
-- [ ] `parse` 函数 - 从账户数据解析
-- [ ] 字段定义：distribution_starting_block_height, num_partitions, parent_blockhash, total_points, total_rewards, distributed_rewards, active
-- [ ] `size` 常量 (77 bytes)
-- [ ] 单元测试
+- [x] Rust 源引用注释 (epoch-rewards crate)
+- [x] `EpochRewards` 结构体定义
+- [x] `parse` 函数 - 从账户数据解析
+- [x] 字段定义：distribution_starting_block_height, num_partitions, parent_blockhash, total_points, total_rewards, distributed_rewards, active
+- [x] `size` 常量 (77 bytes)
+- [x] 单元测试
 
 ### 集成
 
-- [ ] root.zig 导出新模块
-- [ ] 所有测试通过
-- [ ] Sysvar 达到 100% 覆盖率 (10/10)
+- [x] root.zig 导出新模块
+- [x] 所有测试通过
+- [x] Sysvar 达到 100% 覆盖率 (10/10)
 
 ## 技术说明
 
@@ -88,5 +88,5 @@ Rust 源: https://github.com/anza-xyz/solana-sdk/tree/master/epoch-rewards
 ## 完成状态
 
 - 开始日期: 2026-01-05
-- 完成日期: -
-- 状态: ⏳ 进行中
+- 完成日期: 2026-01-05
+- 状态: ✅ 已完成
