docs: add three-layer architecture plan to ROADMAP
- Add SDK restructure section with ASCII diagram
- Define module classification (SDK, Program SDK, Client SDK)
- Add phase-based restructure plan
- Update story file to track progress

--- a/stories/v1.0.0-sdk-restructure.md
+++ b/stories/v1.0.0-sdk-restructure.md
@@ -130,7 +130,7 @@
 
 ### Step 1: 文档准备 (当前)
 - [x] 创建本 Story 文件
-- [ ] 更新 ROADMAP.md
+- [x] 更新 ROADMAP.md
 - [ ] 创建设计文档 (模块依赖图)
 
 ### Step 2: Phase 1 实施
