docs: add module dependency graph design document
- Analyze all module dependencies and classify into categories
- Identify pure modules vs syscall-dependent modules
- Define split strategy for public_key.zig and instruction.zig
- Add ASCII dependency graph visualization
- Document implementation strategy and risks

--- a/stories/v1.0.0-sdk-restructure.md
+++ b/stories/v1.0.0-sdk-restructure.md
@@ -128,10 +128,10 @@
 
 ## 实现步骤
 
-### Step 1: 文档准备 (当前)
+### Step 1: 文档准备 ✅
 - [x] 创建本 Story 文件
 - [x] 更新 ROADMAP.md
-- [ ] 创建设计文档 (模块依赖图)
+- [x] 创建设计文档 (模块依赖图) - `docs/design/module-dependency-graph.md`
 
 ### Step 2: Phase 1 实施
 - [ ] 验证当前测试通过
@@ -166,4 +166,4 @@
 
 - 开始日期: 2026-01-06
 - 预计完成: 2026-01-08
-- 当前状态: ⏳ 进行中 - 文档准备阶段
+- 当前状态: ⏳ 进行中 - Phase 1 准备中
