refactor: extract shared SDK types to sdk/ directory
Phase 1 of SDK restructure complete:
- Create sdk/ directory with independent build system
- Extract pure modules: hash, signature, keypair, bincode, borsh, short_vec, error, native_token, nonce
- Modified public_key.zig: removed syscall PDA, kept pure SHA256 computation
- Modified instruction.zig: removed CPI functions, kept type definitions only
- SDK tests: 105/105 passed
- Main project tests: 375/375 passed (unchanged)

SDK modules have zero syscall dependencies and can be used in any environment.

--- a/stories/v1.0.0-sdk-restructure.md
+++ b/stories/v1.0.0-sdk-restructure.md
@@ -98,16 +98,16 @@
 
 ## 验收标准
 
-### Phase 1: 创建 solana-sdk-zig
+### Phase 1: 创建 solana-sdk-zig ✅
 
-- [ ] 创建 `sdk/` 目录结构
-- [ ] 移动共享类型模块到 `sdk/src/`
-- [ ] 修改 `public_key.zig` 移除 syscall 依赖
-- [ ] 修改 `instruction.zig` 移除 CPI 代码
-- [ ] 创建 `sdk/build.zig` 和 `sdk/build.zig.zon`
-- [ ] 创建 `sdk/src/root.zig` 导出所有类型
-- [ ] `./solana-zig/zig build test` 在 sdk/ 目录通过
-- [ ] 所有 SDK 模块无 syscall 依赖
+- [x] 创建 `sdk/` 目录结构
+- [x] 移动共享类型模块到 `sdk/src/`
+- [x] 修改 `public_key.zig` 移除 syscall 依赖 (保留纯 SHA256 PDA 计算)
+- [x] 修改 `instruction.zig` 移除 CPI 代码 (仅保留类型定义)
+- [x] 创建 `sdk/build.zig` 和 `sdk/build.zig.zon`
+- [x] 创建 `sdk/src/root.zig` 导出所有类型
+- [x] `./solana-zig/zig build test` 在 sdk/ 目录通过 (105/105 tests)
+- [x] 所有 SDK 模块无 syscall 依赖
 
 ### Phase 2: 重构 solana-program-sdk-zig
 
@@ -133,12 +133,12 @@
 - [x] 更新 ROADMAP.md
 - [x] 创建设计文档 (模块依赖图) - `docs/design/module-dependency-graph.md`
 
-### Step 2: Phase 1 实施
-- [ ] 验证当前测试通过
-- [ ] 创建 sdk/ 目录
-- [ ] 复制共享模块
-- [ ] 修改移除 syscall 依赖
-- [ ] 测试 SDK 独立编译
+### Step 2: Phase 1 实施 ✅
+- [x] 验证当前测试通过 (375/375)
+- [x] 创建 sdk/ 目录
+- [x] 复制共享模块 (hash, signature, bincode, borsh, short_vec, error, native_token, keypair, nonce)
+- [x] 修改移除 syscall 依赖 (public_key.zig, instruction.zig)
+- [x] 测试 SDK 独立编译 (105/105 tests passed)
 - [ ] 提交: "refactor: extract shared SDK types"
 
 ### Step 3: Phase 2 实施
@@ -166,4 +166,4 @@
 
 - 开始日期: 2026-01-06
 - 预计完成: 2026-01-08
-- 当前状态: ⏳ 进行中 - Phase 1 准备中
+- 当前状态: ⏳ 进行中 - Phase 1 完成，准备 Phase 2
