refactor: complete SDK extraction with proper module imports
- Delete pure modules from src/ (now imported from sdk/)
  - Removed: hash.zig, signature.zig, keypair.zig, bincode.zig,
    borsh.zig, short_vec.zig, error.zig, native_token.zig, nonce.zig

- Rewrite src/public_key.zig to:
  - Re-export sdk.PublicKey as base type
  - Add syscall-accelerated createProgramAddress/findProgramAddress

- Update all src/ imports to use @import("solana_sdk"):
  - message.zig, signer.zig, transaction.zig (Hash, Signature)
  - blake3.zig, sha256_hasher.zig, keccak_hasher.zig (Hash)
  - epoch_rewards_hasher.zig, vote_interface.zig (Hash)
  - entrypoint.zig, program_pack.zig (ProgramError)
  - root.zig (re-exports SDK modules)

- Update build.zig to add solana_sdk import to solana_program_sdk

Test results:
  - SDK: 105/105 tests passed
  - Program SDK: 286/286 tests passed
  - Total: 391 tests (no regressions)

--- a/stories/v1.0.0-sdk-restructure.md
+++ b/stories/v1.0.0-sdk-restructure.md
@@ -113,9 +113,12 @@
 
 - [x] 修改 `build.zig` 依赖 `sdk/`
 - [x] 修改 `build.zig.zon` 添加 sdk 作为本地依赖
-- [x] 保留 syscall 相关功能在 program 模块 (src/ 保持不变)
-- [x] 为 `public_key` 提供 syscall 版本的 PDA 函数 (src/public_key.zig 保留原有实现)
-- [x] `./solana-zig/zig build test` 通过 (375/375)
+- [x] 删除 `src/` 中的纯模块 (hash, signature, keypair, bincode, borsh, short_vec, error, native_token, nonce)
+- [x] 重写 `src/public_key.zig` 重新导出 SDK 类型 + syscall 加速的 PDA 函数
+- [x] 更新所有 `src/` 文件使用 `@import("solana_sdk")` 导入 SDK 类型
+- [x] `./solana-zig/zig build test` 通过 (286/286 tests)
+- [x] `sdk/` 测试独立通过 (105/105 tests)
+- [x] 总测试覆盖: 391 tests (286 + 105)
 - [x] 功能行为与重构前一致
 - [x] 导出 `solana_sdk` 模块供消费者选择使用
 
@@ -140,14 +143,17 @@
 - [x] 复制共享模块 (hash, signature, bincode, borsh, short_vec, error, native_token, keypair, nonce)
 - [x] 修改移除 syscall 依赖 (public_key.zig, instruction.zig)
 - [x] 测试 SDK 独立编译 (105/105 tests passed)
-- [ ] 提交: "refactor: extract shared SDK types"
+- [x] 提交: "refactor: extract shared SDK types" (ab2ca9b)
 
 ### Step 3: Phase 2 实施 ✅
 - [x] 修改 build.zig 添加 SDK 依赖
 - [x] 修改 build.zig.zon 添加本地路径依赖
 - [x] 导出 solana_sdk 模块
-- [x] 测试完整功能 (375/375 tests passed)
-- [ ] 提交: "refactor: program-sdk depends on SDK"
+- [x] 提交: "refactor: program-sdk depends on SDK" (f2b7ffe)
+- [x] 删除 src/ 中重复的纯模块
+- [x] 更新 src/ 文件从 SDK 导入类型
+- [x] 测试完整功能 (SDK: 105, Program: 286, Total: 391)
+- [x] 提交: "refactor: complete SDK extraction with proper module imports"
 
 ### Step 4: Phase 3 实施 (后续)
 - [ ] 创建 client 目录
