docs: update client SDK story with complete 52 RPC methods plan
- P0: 6 core methods (getBalance, getAccountInfo, etc.)
- P1: 18 common methods
- P2: 28 remaining methods
- Phase 5: convenience methods (_with_commitment variants)
- Phase 6: WebSocket subscriptions (optional)

--- a/stories/v1.1.0-client-sdk.md
+++ b/stories/v1.1.0-client-sdk.md
@@ -1,6 +1,6 @@
 # Story: v1.1.0 Client SDK 实现
 
-> 实现 Solana RPC Client SDK，支持链下交易构建和提交
+> 实现完整的 Solana RPC Client SDK，覆盖所有 52 个 HTTP RPC 方法
 
 ## 背景
 
@@ -10,115 +10,207 @@
 
 缺少 Client SDK，无法进行链下开发（构建交易、查询账户、提交交易等）。
 
-## 目标架构
+## 目标
 
-```
-┌─────────────────────────────────────┐
-│  sdk/ (共享核心类型)                  │
-│  PublicKey, Hash, Signature, etc.   │
-└─────────────────────────────────────┘
-         ▲                 ▲
-         │                 │
-┌────────┴────────┐  ┌────┴────────────┐
-│ src/ (Program)  │  │ client/ (Client)│
-│ syscalls, CPI   │  │ RPC, signing    │
-└─────────────────┘  └─────────────────┘
-```
+实现与 Rust `solana-rpc-client` 对等的功能：
+- 52 个 HTTP RPC 方法
+- `_with_commitment` 变体
+- WebSocket 订阅（后续）
 
-## 模块规划
+## RPC 方法完整列表 (52 个)
+
+### Account Methods (7)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getAccountInfo` | 查询账户信息 | P0 |
+| `getBalance` | 查询余额 | P0 |
+| `getMultipleAccounts` | 批量查询账户 | P1 |
+| `getProgramAccounts` | 查询程序拥有的账户 | P1 |
+| `getLargestAccounts` | 查询最大账户 | P2 |
+| `getTokenAccountBalance` | SPL Token 余额 | P1 |
+| `getTokenAccountsByOwner` | 按所有者查询 Token 账户 | P1 |
+
+### Block Methods (10)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getBlock` | 查询区块信息 | P1 |
+| `getBlockHeight` | 当前区块高度 | P1 |
+| `getBlockProduction` | 区块生产信息 | P2 |
+| `getBlockCommitment` | 区块确认状态 | P2 |
+| `getBlocks` | 查询区块列表 | P2 |
+| `getBlocksWithLimit` | 带限制的区块列表 | P2 |
+| `getBlockTime` | 区块时间 | P2 |
+| `getFirstAvailableBlock` | 最早可用区块 | P2 |
+| `getLatestBlockhash` | 最新区块哈希 | P0 |
+| `isBlockhashValid` | 验证区块哈希有效性 | P1 |
+
+### Transaction Methods (9)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getTransaction` | 查询交易详情 | P1 |
+| `getSignatureStatuses` | 查询签名状态 | P0 |
+| `getSignaturesForAddress` | 按地址查询签名 | P1 |
+| `getTransactionCount` | 交易计数 | P2 |
+| `sendTransaction` | 发送交易 | P0 |
+| `simulateTransaction` | 模拟交易 | P1 |
+| `getFeeForMessage` | 消息费用 | P1 |
+| `getRecentPrioritizationFees` | 优先费用 | P1 |
+| `requestAirdrop` | 空投 (devnet) | P1 |
+
+### Cluster & Node Methods (11)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getClusterNodes` | 集群节点信息 | P2 |
+| `getEpochInfo` | 当前 epoch 信息 | P1 |
+| `getEpochSchedule` | epoch 调度 | P2 |
+| `getGenesisHash` | 创世区块哈希 | P2 |
+| `getHealth` | 节点健康状态 | P1 |
+| `getHighestSnapshotSlot` | 最高快照 slot | P2 |
+| `getIdentity` | 节点身份 | P2 |
+| `getSlot` | 当前 slot | P1 |
+| `getSlotLeader` | 当前 slot leader | P2 |
+| `getSlotLeaders` | slot leaders 列表 | P2 |
+| `getVersion` | Solana 版本 | P1 |
+
+### Inflation & Economics (6)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getInflationGovernor` | 通胀治理 | P2 |
+| `getInflationRate` | 通胀率 | P2 |
+| `getInflationReward` | 通胀奖励 | P2 |
+| `getSupply` | 供应量信息 | P2 |
+| `getMinimumBalanceForRentExemption` | 租金豁免最小余额 | P0 |
+| `getStakeMinimumDelegation` | 最小质押委托 | P2 |
+
+### Validator & Voting (3)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getVoteAccounts` | 投票账户 | P2 |
+| `getLeaderSchedule` | Leader 调度 | P2 |
+| `getRecentPerformanceSamples` | 性能样本 | P2 |
+
+### Token Methods (SPL) (4)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `getTokenSupply` | Token 供应量 | P1 |
+| `getTokenLargestAccounts` | 最大 Token 账户 | P2 |
+| `getTokenAccountsByDelegate` | 按委托查询 | P2 |
+
+### Utility (2)
+
+| 方法 | 说明 | 优先级 |
+|------|------|--------|
+| `minimumLedgerSlot` | 最小账本 slot | P2 |
+| `getMaxRetransmitSlot` | 最大重传 slot | P2 |
+
+## 实现阶段
 
 ### Phase 1: 基础设施
 
-| 模块 | 说明 | 依赖 |
-|------|------|------|
-| `client/src/json_rpc.zig` | JSON-RPC 协议实现 | std.http, std.json |
-| `client/src/error.zig` | 错误类型定义 | - |
-| `client/src/config.zig` | CommitmentConfig 等配置 | - |
+```
+client/
+├── build.zig
+├── build.zig.zon
+└── src/
+    ├── root.zig
+    ├── error.zig          # ClientError, RpcError
+    ├── types.zig          # Response, Context, 配置类型
+    ├── commitment.zig     # CommitmentConfig
+    └── json_rpc.zig       # JSON-RPC 请求/响应处理
+```
 
-### Phase 2: 核心 RPC 方法
+### Phase 2: P0 核心方法 (最小可用)
 
-| 模块 | 说明 | RPC 方法 |
-|------|------|---------|
-| `client/src/rpc_client.zig` | RPC Client 主体 | - |
-| - | getBalance | 查询余额 |
-| - | getLatestBlockhash | 获取最新区块哈希 |
-| - | getAccountInfo | 查询账户信息 |
-| - | sendTransaction | 发送交易 |
-| - | getSignatureStatuses | 查询交易状态 |
+| 方法 | 用途 |
+|------|------|
+| `getBalance` | 查询余额 |
+| `getAccountInfo` | 查询账户 |
+| `getLatestBlockhash` | 交易构建必需 |
+| `getMinimumBalanceForRentExemption` | 创建账户必需 |
+| `sendTransaction` | 发送交易 |
+| `getSignatureStatuses` | 确认交易 |
 
-### Phase 3: 交易构建
+### Phase 3: P1 常用方法
 
-| 模块 | 说明 | 依赖 |
-|------|------|------|
-| `client/src/transaction_builder.zig` | 交易构建器 | sdk.Transaction |
-| `client/src/signer.zig` | 交易签名 | sdk.Keypair |
+| 方法 | 用途 |
+|------|------|
+| `getMultipleAccounts` | 批量查询 |
+| `getProgramAccounts` | 查询程序账户 |
+| `getTransaction` | 交易详情 |
+| `simulateTransaction` | 模拟执行 |
+| `requestAirdrop` | 开发测试 |
+| `getTokenAccountBalance` | SPL Token |
+| `getTokenAccountsByOwner` | SPL Token |
+| `isBlockhashValid` | 区块哈希验证 |
+| `getEpochInfo` | Epoch 信息 |
+| `getSlot` | 当前 Slot |
+| `getHealth` | 健康检查 |
+| `getVersion` | 版本信息 |
+| `getFeeForMessage` | 费用估算 |
+| `getRecentPrioritizationFees` | 优先费用 |
+| `getSignaturesForAddress` | 历史签名 |
+| `getTokenSupply` | Token 供应量 |
+| `getBlock` | 区块信息 |
+| `getBlockHeight` | 区块高度 |
+
+### Phase 4: P2 完整实现
+
+剩余所有方法，确保 52 个全部覆盖。
+
+### Phase 5: 便捷方法
+
+- `_with_commitment` 变体
+- `send_and_confirm_transaction` (发送并等待确认)
+- `poll_for_signature` (轮询签名状态)
+- `wait_for_balance` (等待余额变化)
+
+### Phase 6: WebSocket 订阅 (可选)
+
+- `accountSubscribe` / `accountUnsubscribe`
+- `slotSubscribe` / `slotUnsubscribe`
+- `signatureSubscribe` / `signatureUnsubscribe`
+- 等 9 对订阅方法
 
 ## 验收标准
 
 ### Phase 1: 基础设施 ⏳
-
 - [ ] 创建 `client/` 目录结构
-- [ ] 创建 `client/build.zig` 和 `client/build.zig.zon`
 - [ ] 实现 `error.zig` - ClientError, RpcError
-- [ ] 实现 `config.zig` - CommitmentConfig, RpcClientConfig
-- [ ] 实现 `json_rpc.zig` - JSON-RPC 请求/响应处理
+- [ ] 实现 `types.zig` - Response<T>, RpcResponseContext
+- [ ] 实现 `commitment.zig` - CommitmentConfig
+- [ ] 实现 `json_rpc.zig` - HTTP JSON-RPC 客户端
 - [ ] 基础测试通过
 
-### Phase 2: 核心 RPC ⏳
+### Phase 2: P0 核心 ⏳
+- [ ] `getBalance`
+- [ ] `getAccountInfo`
+- [ ] `getLatestBlockhash`
+- [ ] `getMinimumBalanceForRentExemption`
+- [ ] `sendTransaction`
+- [ ] `getSignatureStatuses`
+- [ ] 端到端测试 (devnet)
 
-- [ ] 实现 `rpc_client.zig` 基础结构
-- [ ] 实现 `getBalance` 方法
-- [ ] 实现 `getLatestBlockhash` 方法
-- [ ] 实现 `getAccountInfo` 方法
-- [ ] 实现 `sendTransaction` 方法
-- [ ] 实现 `getSignatureStatuses` 方法
-- [ ] RPC 方法测试（mock server 或 devnet）
+### Phase 3: P1 常用 ⏳
+- [ ] 18 个 P1 方法全部实现
+- [ ] 测试覆盖
 
-### Phase 3: 交易构建 ⏳
+### Phase 4: P2 完整 ⏳
+- [ ] 剩余方法实现
+- [ ] 52 个方法全部覆盖
+- [ ] 完整测试
 
-- [ ] 实现 `transaction_builder.zig`
-- [ ] 实现 `signer.zig` - Ed25519 签名
-- [ ] 端到端测试：构建 → 签名 → 发送 → 确认
+### Phase 5: 便捷方法 ⏳
+- [ ] `_with_commitment` 变体
+- [ ] 辅助方法 (send_and_confirm 等)
 
 ## 技术设计
-
-### JSON-RPC 请求格式
-
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "method": "getBalance",
-  "params": ["PublicKeyBase58", {"commitment": "confirmed"}]
-}
-```
-
-### JSON-RPC 响应格式
-
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "result": {
-    "context": {"slot": 123456},
-    "value": 1000000000
-  }
-}
-```
-
-### CommitmentConfig
-
-```zig
-pub const Commitment = enum {
-    processed,
-    confirmed,
-    finalized,
-};
-
-pub const CommitmentConfig = struct {
-    commitment: Commitment = .confirmed,
-};
-```
 
 ### RpcClient 结构
 
@@ -127,18 +219,39 @@ pub const RpcClient = struct {
     allocator: std.mem.Allocator,
     endpoint: []const u8,
     commitment: CommitmentConfig,
+    http_client: std.http.Client,
     request_id: std.atomic.Value(u64),
-    
-    pub fn init(allocator: std.mem.Allocator, endpoint: []const u8) RpcClient;
+
+    // P0 Methods
     pub fn getBalance(self: *RpcClient, pubkey: PublicKey) !u64;
-    pub fn getLatestBlockhash(self: *RpcClient) !struct { hash: Hash, lastValidBlockHeight: u64 };
+    pub fn getBalanceWithCommitment(self: *RpcClient, pubkey: PublicKey, commitment: Commitment) !Response(u64);
     pub fn getAccountInfo(self: *RpcClient, pubkey: PublicKey) !?AccountInfo;
-    pub fn sendTransaction(self: *RpcClient, tx: []const u8) !Signature;
-    pub fn getSignatureStatuses(self: *RpcClient, sigs: []const Signature) ![]?TransactionStatus;
+    pub fn getLatestBlockhash(self: *RpcClient) !LatestBlockhash;
+    pub fn getMinimumBalanceForRentExemption(self: *RpcClient, data_len: usize) !u64;
+    pub fn sendTransaction(self: *RpcClient, transaction: []const u8) !Signature;
+    pub fn getSignatureStatuses(self: *RpcClient, signatures: []const Signature) ![]?TransactionStatus;
+    
+    // ... 46 more methods
 };
 ```
 
-### 错误处理
+### Response 类型
+
+```zig
+pub fn Response(comptime T: type) type {
+    return struct {
+        context: RpcResponseContext,
+        value: T,
+    };
+}
+
+pub const RpcResponseContext = struct {
+    slot: u64,
+    api_version: ?[]const u8,
+};
+```
+
+### 错误类型
 
 ```zig
 pub const ClientError = error{
@@ -147,50 +260,24 @@ pub const ClientError = error{
     RpcError,
     Timeout,
     ConnectionFailed,
+    InvalidResponse,
 };
 
-pub const RpcError = struct {
+pub const RpcErrorInfo = struct {
     code: i64,
     message: []const u8,
-    data: ?[]const u8,
+    data: ?std.json.Value,
 };
 ```
 
-## 实现顺序
+## 方法统计
 
-```
-1. client/build.zig, build.zig.zon     (项目结构)
-2. client/src/error.zig                (错误类型)
-3. client/src/config.zig               (配置类型)
-4. client/src/json_rpc.zig             (JSON-RPC 协议)
-5. client/src/rpc_client.zig           (RPC 方法)
-   - getBalance (最简单，验证整体流程)
-   - getLatestBlockhash (交易必需)
-   - getAccountInfo (查询账户)
-   - sendTransaction (发送交易)
-   - getSignatureStatuses (确认交易)
-6. client/src/signer.zig               (交易签名)
-7. client/src/root.zig                 (导出)
-```
-
-## 测试策略
-
-### 单元测试
-- JSON-RPC 序列化/反序列化
-- 错误处理
-- 配置解析
-
-### 集成测试（可选）
-- 使用 Solana devnet/testnet
-- 或使用 mock HTTP server
-
-## 风险评估
-
-| 风险 | 影响 | 缓解措施 |
-|------|------|---------|
-| HTTP Client 兼容性 | std.http 在不同平台行为不同 | 充分测试 Linux/macOS |
-| JSON 解析性能 | 大响应可能较慢 | 使用流式解析 |
-| 网络错误处理 | 超时、重试逻辑复杂 | 先实现简单版本 |
+| 优先级 | 数量 | 说明 |
+|--------|------|------|
+| P0 | 6 | 最小可用 |
+| P1 | 18 | 常用方法 |
+| P2 | 28 | 完整覆盖 |
+| **Total** | **52** | 全部 HTTP RPC |
 
 ## 完成状态
 
