--- a/stories/v0.29.0-program-sdk-completion.md
+++ b/stories/v0.29.0-program-sdk-completion.md
@@ -112,13 +112,14 @@ pub const EpochInfo = struct {
 - [x] 添加单元测试
 - [x] 更新 `sdk/src/root.zig` 导出
 
-### Phase 5: sdk_ids.zig (P2)
+### Phase 5: sdk_ids.zig (P2 - 延后)
 
-- [ ] 创建 `sdk/src/sdk_ids.zig`
-- [ ] 集中定义所有程序 ID 常量
-- [ ] 分类组织（system, loaders, sysvars, native programs）
-- [ ] 添加单元测试
-- [ ] 更新 `sdk/src/root.zig` 导出
+> 注: 程序 ID 常量已分散在各模块中（bpf_loader.zig, system_program.zig 等），
+> 暂不需要集中。如有需要，可在后续版本添加。
+
+- [ ] 创建 `sdk/src/sdk_ids.zig` (可选)
+- [ ] 集中定义所有程序 ID 常量 (可选)
+- [ ] 分类组织（system, loaders, sysvars, native programs）(可选)
 
 ### Phase 6: 文档更新
 
