feat(program-test): implement v0.30.0 Rust-Zig integration tests
Add integration test framework that uses Rust SDK to generate test vectors,
then verifies Zig SDK implementation against that data.

- Add Rust test vector generator (src/lib.rs, src/bin/generate_vectors.rs)
- Add Zig integration tests (integration/test_pubkey.zig)
- Verify PublicKey and Hash Base58 encoding compatibility
- Update test.sh to run full integration test workflow
- Update Cargo.toml with solana-sdk 3.0.0 dependency

Test results: SDK 132 tests, Program SDK 300 tests, Integration 3 tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -219,21 +219,21 @@ $ZIG build test-integration --summary all
 
 ### 必须通过
 
-- [ ] PublicKey Base58 编解码与 Rust 完全一致
-- [ ] Hash 十六进制编解码与 Rust 完全一致
-- [ ] Signature Base58 编解码与 Rust 完全一致
-- [ ] InstructionError bincode 序列化与 Rust 完全一致
-- [ ] TransactionError bincode 序列化与 Rust 完全一致
+- [x] PublicKey Base58 编解码与 Rust 完全一致
+- [x] Hash Base58 编解码与 Rust 完全一致
+- [ ] Signature Base58 编解码与 Rust 完全一致 (需要更新 format 方法签名)
+- [ ] InstructionError bincode 序列化与 Rust 完全一致 (Rust 版本兼容性问题)
+- [ ] TransactionError bincode 序列化与 Rust 完全一致 (Rust 版本兼容性问题)
 - [ ] UpgradeableLoaderInstruction bincode 序列化与 Rust 完全一致
-- [ ] PDA 派生结果与 Rust 完全一致
+- [ ] PDA 派生结果与 Rust 完全一致 (需要运行时 seeds 支持)
 - [ ] EpochInfo JSON 格式与 RPC 响应一致
 
 ### 测试覆盖
 
-- [ ] 每种 InstructionError 变体 (约 50 个)
-- [ ] 每种 TransactionError 变体 (约 35 个)
-- [ ] 每种 UpgradeableLoaderInstruction 变体 (10 个)
-- [ ] 边界条件和特殊值测试
+- [ ] 每种 InstructionError 变体 (约 50 个) - 已生成测试向量
+- [ ] 每种 TransactionError 变体 (约 35 个) - 已生成测试向量
+- [ ] 每种 UpgradeableLoaderInstruction 变体 (10 个) - 已生成测试向量
+- [x] 边界条件和特殊值测试 (PublicKey/Hash)
 
 ## 预期收益
 
@@ -260,9 +260,24 @@ $ZIG build test-integration --summary all
 
 ## 完成状态
 
-- 开始日期: -
+- 开始日期: 2026-01-06
 - 完成日期: -
-- 当前状态: ⏳ 待开始
+- 当前状态: 🔨 进行中
+
+### 已完成工作
+
+1. ✅ Rust 测试向量生成器 (`program-test/src/lib.rs`)
+2. ✅ 测试向量生成二进制 (`program-test/src/bin/generate_vectors.rs`)
+3. ✅ Zig 集成测试框架 (`program-test/integration/`)
+4. ✅ PublicKey Base58 编解码测试
+5. ✅ Hash Base58 编解码测试
+6. ✅ 更新 test.sh 支持集成测试
+
+### 待完成工作
+
+1. Signature Base58 测试 (需要更新 SDK 中 Signature.format 签名)
+2. PDA 派生测试 (需要运行时 seeds 支持)
+3. bincode 序列化测试 (Rust 版本兼容性问题待解决)
 
 ## 参考资料
 
