docs: update v0.30.0 story with ShortVec and SHA256 tests
Total coverage:
- 12 integration tests
- 39 test vectors
- 8 type categories verified against Rust SDK

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -225,6 +225,8 @@ $ZIG build test-integration --summary all
 - [x] PDA 派生结果与 Rust 完全一致
 - [x] Keypair 签名与 Rust 完全一致
 - [x] EpochInfo 字段值与 Rust 完全一致
+- [x] ShortVec 编解码与 Rust 完全一致
+- [x] SHA256 哈希计算与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -240,6 +242,8 @@ $ZIG build test-integration --summary all
 - [x] PDA 测试向量 (4 个)
 - [x] Keypair 测试向量 (4 个)
 - [x] EpochInfo 测试向量 (5 个)
+- [x] ShortVec 测试向量 (9 个)
+- [x] SHA256 测试向量 (7 个)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -284,6 +288,8 @@ $ZIG build test-integration --summary all
 9. ✅ Keypair 签名兼容性测试 (4 vectors)
 10. ✅ EpochInfo 字段值兼容性测试 (5 vectors)
 11. ✅ 修复 CI: Rust imports 更新为 Solana SDK 3.0 格式
+12. ✅ ShortVec 编解码测试 (9 vectors, 覆盖 1-3 字节编码)
+13. ✅ SHA256 哈希计算测试 (7 vectors)
 
 ### 未实现工作 (低优先级)
 
