docs: update v0.30.0 story with Lamports and Rent tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -227,6 +227,8 @@ $ZIG build test-integration --summary all
 - [x] EpochInfo 字段值与 Rust 完全一致
 - [x] ShortVec 编解码与 Rust 完全一致
 - [x] SHA256 哈希计算与 Rust 完全一致
+- [x] Lamports 字符串解析与 Rust 完全一致
+- [x] Rent 最小余额计算与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -244,6 +246,8 @@ $ZIG build test-integration --summary all
 - [x] EpochInfo 测试向量 (5 个)
 - [x] ShortVec 测试向量 (9 个)
 - [x] SHA256 测试向量 (7 个)
+- [x] Lamports 测试向量 (15 个, 包含有效和无效输入)
+- [x] Rent 测试向量 (7 个, 覆盖常见账户大小)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -290,6 +294,8 @@ $ZIG build test-integration --summary all
 11. ✅ 修复 CI: Rust imports 更新为 Solana SDK 3.0 格式
 12. ✅ ShortVec 编解码测试 (9 vectors, 覆盖 1-3 字节编码)
 13. ✅ SHA256 哈希计算测试 (7 vectors)
+14. ✅ Lamports 字符串解析测试 (15 vectors, 有效/无效输入)
+15. ✅ Rent 最小余额计算测试 (7 vectors, 常见账户大小)
 
 ### 未实现工作 (低优先级)
 
