docs: update v0.30.0 story with Clock, EpochSchedule, DurableNonce tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -229,6 +229,9 @@ $ZIG build test-integration --summary all
 - [x] SHA256 哈希计算与 Rust 完全一致
 - [x] Lamports 字符串解析与 Rust 完全一致
 - [x] Rent 最小余额计算与 Rust 完全一致
+- [x] Clock sysvar 字段值与 Rust 完全一致
+- [x] EpochSchedule 计算与 Rust 完全一致
+- [x] DurableNonce 派生与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -248,6 +251,9 @@ $ZIG build test-integration --summary all
 - [x] SHA256 测试向量 (7 个)
 - [x] Lamports 测试向量 (15 个, 包含有效和无效输入)
 - [x] Rent 测试向量 (7 个, 覆盖常见账户大小)
+- [x] Clock 测试向量 (4 个, 包含边界值)
+- [x] EpochSchedule 测试向量 (10 个, warmup 和 no-warmup)
+- [x] DurableNonce 测试向量 (4 个, 哈希派生验证)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -296,6 +302,9 @@ $ZIG build test-integration --summary all
 13. ✅ SHA256 哈希计算测试 (7 vectors)
 14. ✅ Lamports 字符串解析测试 (15 vectors, 有效/无效输入)
 15. ✅ Rent 最小余额计算测试 (7 vectors, 常见账户大小)
+16. ✅ Clock sysvar 字段值测试 (4 vectors, 包含边界值)
+17. ✅ EpochSchedule 计算测试 (10 vectors, warmup 和 no-warmup)
+18. ✅ DurableNonce 派生测试 (4 vectors, 哈希派生验证)
 
 ### 未实现工作 (低优先级)
 
