docs: update v0.30.0 story with Bincode and Borsh tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -232,6 +232,8 @@ $ZIG build test-integration --summary all
 - [x] Clock sysvar 字段值与 Rust 完全一致
 - [x] EpochSchedule 计算与 Rust 完全一致
 - [x] DurableNonce 派生与 Rust 完全一致
+- [x] Bincode 整数序列化与 Rust 完全一致
+- [x] Borsh 整数序列化与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -254,6 +256,8 @@ $ZIG build test-integration --summary all
 - [x] Clock 测试向量 (4 个, 包含边界值)
 - [x] EpochSchedule 测试向量 (10 个, warmup 和 no-warmup)
 - [x] DurableNonce 测试向量 (4 个, 哈希派生验证)
+- [x] Bincode 测试向量 (11 个, 整数和布尔类型)
+- [x] Borsh 测试向量 (11 个, 整数和布尔类型)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -305,11 +309,13 @@ $ZIG build test-integration --summary all
 16. ✅ Clock sysvar 字段值测试 (4 vectors, 包含边界值)
 17. ✅ EpochSchedule 计算测试 (10 vectors, warmup 和 no-warmup)
 18. ✅ DurableNonce 派生测试 (4 vectors, 哈希派生验证)
+19. ✅ Bincode 序列化测试 (11 vectors, 整数/布尔/Option 类型)
+20. ✅ Borsh 序列化测试 (11 vectors, 整数/布尔/Option 类型)
 
 ### 未实现工作 (低优先级)
 
-1. ❌ bincode 序列化测试 - 需要确保 Rust/Zig enum 编号完全一致，复杂度高
-2. ❌ TransactionError 测试 - 同上
+1. ❌ InstructionError bincode 序列化 - 需要确保 Rust/Zig enum 编号完全一致，复杂度高
+2. ❌ TransactionError bincode 序列化 - 同上
 
 ## 参考资料
 
