docs: update v0.30.0 story with System instruction tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -234,6 +234,7 @@ $ZIG build test-integration --summary all
 - [x] DurableNonce 派生与 Rust 完全一致
 - [x] Bincode 整数序列化与 Rust 完全一致
 - [x] Borsh 整数序列化与 Rust 完全一致
+- [x] System 指令编码与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -258,6 +259,7 @@ $ZIG build test-integration --summary all
 - [x] DurableNonce 测试向量 (4 个, 哈希派生验证)
 - [x] Bincode 测试向量 (11 个, 整数和布尔类型)
 - [x] Borsh 测试向量 (11 个, 整数和布尔类型)
+- [x] System 指令测试向量 (6 个, Transfer/CreateAccount/Assign/Allocate)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -311,6 +313,7 @@ $ZIG build test-integration --summary all
 18. ✅ DurableNonce 派生测试 (4 vectors, 哈希派生验证)
 19. ✅ Bincode 序列化测试 (11 vectors, 整数/布尔/Option 类型)
 20. ✅ Borsh 序列化测试 (11 vectors, 整数/布尔/Option 类型)
+21. ✅ System 指令编码测试 (6 vectors, Transfer/CreateAccount/Assign/Allocate)
 
 ### 未实现工作 (低优先级)
 
