docs: update v0.30.0 story with Keccak256 and ComputeBudget tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -235,6 +235,8 @@ $ZIG build test-integration --summary all
 - [x] Bincode 整数序列化与 Rust 完全一致
 - [x] Borsh 整数序列化与 Rust 完全一致
 - [x] System 指令编码与 Rust 完全一致
+- [x] Keccak256 哈希计算与 Rust 完全一致
+- [x] ComputeBudget 指令编码与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -260,6 +262,8 @@ $ZIG build test-integration --summary all
 - [x] Bincode 测试向量 (11 个, 整数和布尔类型)
 - [x] Borsh 测试向量 (11 个, 整数和布尔类型)
 - [x] System 指令测试向量 (6 个, Transfer/CreateAccount/Assign/Allocate)
+- [x] Keccak256 测试向量 (7 个, 各种输入)
+- [x] ComputeBudget 测试向量 (7 个, 所有指令类型)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -314,6 +318,8 @@ $ZIG build test-integration --summary all
 19. ✅ Bincode 序列化测试 (11 vectors, 整数/布尔/Option 类型)
 20. ✅ Borsh 序列化测试 (11 vectors, 整数/布尔/Option 类型)
 21. ✅ System 指令编码测试 (6 vectors, Transfer/CreateAccount/Assign/Allocate)
+22. ✅ Keccak256 哈希测试 (7 vectors, 使用 std.crypto)
+23. ✅ ComputeBudget 指令编码测试 (7 vectors, 所有指令类型)
 
 ### 未实现工作 (低优先级)
 
